[package]
name = "force-send-sync"
version = "1.2.0"
authors = ["Markus Klein"]
edition = "2018"
license = "MIT"
repository = "https://github.com/pacman82/force-send-sync"
documentation = "https://docs.rs/force-send-sync/"
description = "Unsafe wrappers to force Send and Sync."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

categories = ["no-std"]

[dependencies]
