[package]
name = "force-send-sync"
version = "2.0.0"
authors = ["Markus Klein"]
edition = "2024"
license = "MIT"
repository = "https://github.com/pacman82/force-send-sync"
documentation = "https://docs.rs/force-send-sync/"
description = "Unsafe wrappers to force Send and Sync."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

categories = ["no-std"]

[dependencies]
